<?php

namespace Infrastructure\Model;

class Signal {

    public const SIGNAL_DICT = []; 

    public static function getUnitName(string $signalName): string {
        // код метода
        return '';
    }

    public static function getByDeviceId(int $deviceId): array {
        // код метода
        return [];
    }

    public static function getByTime(int $signalId, $date): array {
        // код метода
        return [];
    }
}