<?php

namespace Shared\Infrastructure;

class Api {

    public static function throwInvalidRequestParams(string $errorMessage = '') {
        // код метода
    }
}